# rSGD

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.md  SOURCES.txt  appveyor.yml  build.ps1  rSGDConfig.cmake.in  setup.py
.circleci/: config.yml
ReplicatedStochasticGradientDescent/: __init__.py  __version__.py  build.py
ReplicatedStochasticGradientDescent/example/: runtest.py  runtrain.py
ReplicatedStochasticGradientDescent/include/: params.pxd  pattern.pxd  rsgd.pxd
ReplicatedStochasticGradientDescent/rsgd/: Patterns.py  ReplicatedStochasticGradientDescent.py  __init__.py  misc.py
ReplicatedStochasticGradientDescent/source/: CMakeLists.txt  Patterns.py  ReplicatedStochasticGradientDescent.py  rSGD.cpp  rSGD.pyx
docker/: Dockerfile  run.ps1  run.sh
docs/: _config.yml  cpp_install.md  index.md  model.md  python_install.md
example/: test_main.cpp  train_main.cpp
include/: cmd.h  errors.h  kick.h  netnk.h  parameters.h  parse_args.h  pattern.h  pattern_permutation.h  rsgd.h  utils.h
src/: cmd.cpp  kick.cpp  netnk.cpp  parameters.cpp  pattern.cpp  pattern_permutation.cpp  rsgd.cpp  utils.cpp
